--- a/sp-gateway/src/main/resources/application.yml
+++ b/sp-gateway/src/main/resources/application.yml
@@ -15,6 +15,8 @@ eureka:
 zuul:
   prefix: /api # 添加路由前缀
   retryable: true
+  routes:
+    item-service: /item/**
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
   ReadTimeout: 2000 # 读取超时时间(ms)
