通用异常定义

--- a/sp-item/sp-item-interface/pom.xml
+++ b/sp-item/sp-item-interface/pom.xml
@@ -12,6 +12,12 @@
     <groupId>com.shoppingmall.service</groupId>
     <artifactId>sp-item-interface</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
