--- a/sp-item/sp-item-service/pom.xml
+++ b/sp-item/sp-item-service/pom.xml
@@ -56,6 +56,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <dependency>
+            <artifactId>shoppingmall</artifactId>
+            <groupId>com.shoppingmall.parent</groupId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.shoppingmall.common</groupId>
+            <artifactId>sp-common</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
