--- a/sp-item/sp-item-interface/pom.xml
+++ b/sp-item/sp-item-interface/pom.xml
@@ -17,6 +17,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-core</artifactId>
+            <version>RELEASE</version>
+        </dependency>
     </dependencies>
 
 
