--- a/sp-item/sp-item-service/src/main/resources/application.yml
+++ b/sp-item/sp-item-service/src/main/resources/application.yml
@@ -5,7 +5,8 @@ spring:
     name: item-service
   datasource:
     #url: jdbc:mysql://localhost:3306/heima
-    url: jdbc:mysql://localhost:3306/assistant?serverTimezone=GMT%2B8
+    #url: jdbc:mysql://localhost:3306/assistant?serverTimezone=GMT%2B8
+    url: jdbc:mysql://localhost:3306/yun6?serverTimezone=GMT%2B8
     username: root
     password: root
     hikari:
