--- a/sp-item/sp-item-service/pom.xml
+++ b/sp-item/sp-item-service/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>sp-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
 
 </project>
