--- a/sp-gateway/src/main/resources/application.yml
+++ b/sp-gateway/src/main/resources/application.yml
@@ -17,6 +17,11 @@ zuul:
   retryable: true
   routes:
     item-service: /item/**
+    #upload-service: /upload/**
+    upload-service:
+      path: /upload/**
+      serviceId: upload-service
+      strip-prefix: false
 ribbon:
   ConnectTimeout: 250 # 连接超时时间(ms)
   ReadTimeout: 2000 # 读取超时时间(ms)
